--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: p3bm's online notebook
 description: Feel free to take a look around
+logo: https://p3bm.github.io/images/logo
