--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: p3bm's online notebook
-description: Feel free to take a look around
+description: Very much a work-in-progress but feel free to take a look around or visit my [hackaday.io](https://hackaday.io/p3bm) page.
 logo: https://p3bm.github.io/images/logo.png
